@@ -1537,6 +1537,9 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 	
 	// update the cursor
     [[[self currentSession] TEXTVIEW] setNeedsDisplay: YES];
+    if ([[self currentSession] timerMode] != FAST_MODE) {
+        [[self currentSession] setTimerMode: FAST_MODE];
+    }
 }
 
 - (void) windowDidResignKey: (NSNotification *)aNotification
